<resources>
    <string name="app_name">RNG Drinks</string>
    <!--=========================== MAIN MENU ============================ -->
    <!--Main menu buttons -->
    <string name="play_button">Play!</string>
    <string name="settings_button">SETTINGS</string>
    <string name="achievements_button">ACHIEVEMENTS</string>
    <string name="exit_button">EXIT</string>
    <string name="developer">Developed by Big Sad Studio</string>

    <!--=========================== GAME ACTIVITY ============================ -->
    <!--Game activity text -->
    <string name="your_number">Your number is:</string>
    <string name="num_of_sips">Number of sips: </string>
    <string name="roll_button">Roll number</string>
    <!--Popup activity text -->
    <string name="popup_title">YOU LOSE!</string>
    <string name="popup_sips">%s has %d sips</string>
    <string name="lose_button_text">Another round!</string>

    <!--=========================== SETUP MENU ============================ -->
    <string name="num_of_players">Number of players:</string>
    <string name="starting_number">Starting number:</string>
    <string name="setup_button">Begin!</string>

    <!--=========================== ACHIEVEMENTS MENU ============================ -->
    <string name="achievements_title">ACHIEVEMENTS</string>
    <string name="coming_soon">COMING SOON!</string>

    <!--=========================== SETTINGS MENU ============================ -->
    <string name="settings_title">Settings</string>
    <string name="music_on">MUSIC</string>
    <string name="music_off">MUSIC</string>
    <string name="sound_on">SOUND</string>
    <string name="sound_off">SOUND</string>
    <string name="error_title">Ooops!</string>
    <string name="error_type">Number error</string>
    <string name="player_error">Please enter a number between 2 and 50 for the player field</string>
    <string name="number_error">Please enter a number between 2 and a million for the starting number</string>
    <string name="error_button">Close</string>
    <string name="empty_string"></string>
    <string name="how_to_play">How to play</string>
    <string name="how_to_play_first">You start with a number of your choice, for example, let\'s say 150. The first player presses the button and the game will generate a random number between the starting number (150) and 1, the randomly generated number for example 67 will now be the new highest number.</string>
    <string name="how_to_play_second">The next person who presses the \"roll number\" button will now get a randomly generated number between 67 and 1. the players continue going in circles pressing the button until someone reaches number 1. the player who rolls 1 has to drink as many sips as the number of times players had to roll a random number to get to 1.</string>
    <string name="player_select">Players</string>
    <string name="player_list_element">Player</string>
    <string name="messages">Tough luck!:Better luck next time!:Bottoms up!:Out of luck!:Unfortunate!:Hard luck!:Drinking time!:Yikes!:Ouch!:Bad break!:Cheers!:Down the hatch!:Drink up!</string>
    <string name="current_player">Current player:</string>
    <string name="popup_shot">%s take a shot!</string>

</resources>