<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f28e1c"
    tools:context=".SettingsActivity">


    <Button
        android:id="@+id/sl"
        android:layout_width="77dp"
        android:layout_height="73dp"
        android:layout_marginTop="240dp"
        android:background="@drawable/ic_slovenia"
        android:onClick="changeLanguage"
        android:text="sl"
        android:textColor="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.317"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title_text" />

    <Button
        android:id="@+id/en"
        android:layout_width="77dp"
        android:layout_height="73dp"
        android:layout_marginTop="240dp"
        android:background="@drawable/ic_united_kingdom"
        android:onClick="changeLanguage"
        android:text="en"
        android:textColor="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.679"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title_text" />

    <Button
        android:id="@+id/sound_button"
        android:layout_width="77dp"
        android:layout_height="73dp"
        android:layout_marginTop="136dp"
        android:background="@drawable/volume_on"
        android:onClick="soundClicked"
        app:layout_constraintEnd_toStartOf="@+id/music_text"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title_text" />

    <TextView
        android:id="@+id/sound_text"
        android:layout_width="143dp"
        android:layout_height="45dp"

        android:layout_marginTop="164dp"
        android:fontFamily="@font/custom_font"
        android:text="@string/sound_off"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title_text" />

    <TextView
        android:id="@+id/Title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/custom_font"
        android:text="@string/settings_title"
        android:textSize="36sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/music_button"
        android:layout_width="77dp"
        android:layout_height="73dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/music_on"
        android:onClick="musicClicked"
        app:layout_constraintEnd_toStartOf="@+id/music_text"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title_text" />

    <TextView
        android:id="@+id/music_text"
        android:layout_width="143dp"
        android:layout_height="45dp"

        android:layout_marginTop="64dp"
        android:fontFamily="@font/custom_font"
        android:text="@string/music_on"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title_text" />
</androidx.constraintlayout.widget.ConstraintLayout>